--- a/src/Components/UserItem/UserItem.css
+++ b/src/Components/UserItem/UserItem.css
@@ -8,6 +8,9 @@
   border: 1px solid gray;
   padding: 0.5rem 1rem;
 }
+.user-name {
+  text-transform: capitalize;
+}
 .user-item:not(:last-child) {
   margin-bottom: 0.75rem;
 }
